Insert CSS file from scripting API. Delete declarativeContent from permissions.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,7 +7,7 @@
    "default_title": "Click to check characters"
   },
   "permissions": [
-    "activeTab", "declarativeContent", "scripting"
+    "activeTab", "scripting"
   ],
   "background": {
     "service_worker": "background.js"
