Add lint entry to package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "charcheckはChrome拡張機能として動作するjavascriptプログラムであり、ブラウザで表示中のページに対して、コンテンツ中のテキストに含まれる全角英字・全角数字や、半角・全角スペースが挿入された箇所などを色分けしてハイライト表示する機能を提供します。",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint extension/*.js"
   },
   "repository": {
     "type": "git",
