--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "charcheck",
   "version": "1.0.0",
-  "description": "charcheckはChrome拡張機能として動作するjavascriptプログラムであり、ブラウザで表示中のページに対して、コンテンツ中のテキストに含まれる全角英字・全角数字や、半角・全角スペースが挿入された箇所などを色分けしてハイライト表示する機能を提供します。",
+  "description": "charcheckは、ブラウザで表示中のページのテキストに含まれる全角英字・全角数字や、半角・全角スペースが挿入された箇所などを色分けしてハイライト表示するChrome拡張機能です。",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
